# rust-fixed-length-format

./: Cargo.toml  README.md
.cargo/: config.toml
src/: fixed_length_record.rs  main.rs  resources_todos.rs
