[package]
name = "demo-rust-build-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pad = "0.1.6"
serde = { version = "1", features = ["derive"] }
ureq = { version = "*", features = ["json", "charset"] }
